[package]
name = "vye-base"
version = "0.1.0"
edition = "2024"

[features]
frb-compat = ["dep:flutter_rust_bridge", "dep:anyhow"]
tokio = ["dep:tokio"]
std = []

[dependencies]
anyhow = { version = "1.0.100", optional = true }
async-trait = "0.1.89"
crossbeam = "0.8.4"
flutter_rust_bridge = { version = "2.11.1", optional = true }
futures = "0.3.31"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"], optional = true }
tracing = "0.1.41"
type-map = "0.5.1"
